j'ai trouvé une type c tou

--- a/Opti2 devoir1/main.tex
+++ b/Opti2 devoir1/main.tex
@@ -163,7 +163,7 @@ regularizer term will have a small impact on the optimization problem. So the
 obtained image after solving the problem will be close to the original one, and
 exactly the same with $\lambda = 0$. When increasing $\lambda$, the regularizer term
 will take more importance and the solution will reduce the difference between the pixels.
-It will result in remooving the noise, but a blurred image. 
+It will result in removing the noise, but a blurred image. 
 
 
 \section*{Proximal Gradient Method}
